--- a/api/pom.xml
+++ b/api/pom.xml
@@ -9,26 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sealed-auditor</artifactId>
+    <artifactId>api</artifactId>
 
     <packaging>bundle</packaging>
-
-    <dependencies>
-        <dependency>
-            <groupId>hu.fnf.devel</groupId>
-            <artifactId>auction-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>hu.fnf.devel</groupId>
-            <artifactId>auction-spi</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
-        </dependency>
-    </dependencies>
 
     <build>
         <plugins>
@@ -37,9 +20,7 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Bundle-Activator>
-                            hu.fnf.devel.auction.auditor.sealed.SealedFirstPriceAuditorActivator
-                        </Bundle-Activator>
+                        <Export-Package>*</Export-Package>
                     </instructions>
                 </configuration>
             </plugin>
