--- a/auctioneer-sealed/pom.xml
+++ b/auctioneer-sealed/pom.xml
@@ -28,6 +28,11 @@
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>
     </dependencies>
 
     <build>
