--- a/spi/pom.xml
+++ b/spi/pom.xml
@@ -9,9 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>auction-api</artifactId>
+    <artifactId>spi</artifactId>
 
     <packaging>bundle</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>hu.fnf.devel</groupId>
+            <artifactId>auction-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
     <build>
         <plugins>
@@ -20,7 +29,9 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Export-Package>*</Export-Package>
+                        <Export-Package>
+                            hu.fnf.devel.auction.spi
+                        </Export-Package>
                     </instructions>
                 </configuration>
             </plugin>
