--- a/seller-simple/pom.xml
+++ b/seller-simple/pom.xml
@@ -37,9 +37,9 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Bundle-Activator>
-                            hu.fnf.devel.auction.seller.simple.SellerActivator
-                        </Bundle-Activator>
+                        <!--<Bundle-Activator>-->
+                            <!--hu.fnf.devel.auction.seller.simple.SellerActivator-->
+                        <!--</Bundle-Activator>-->
                     </instructions>
                 </configuration>
             </plugin>
